--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,4 +1,6 @@
 // _forms.scss
+@import '../mixins';
+
 
 .body_contact {
   font-family: $font-family_1;
@@ -10,57 +12,6 @@
   min-height: 100vh;
   background: linear-gradient(to bottom right, $bg_first, $bg_second);
   color: $color_6;
-}
-
-@mixin shared-input-styles {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 20px;
-  border: 1px solid $color_14;
-  border-radius: 8px;
-  font-size: 1em;
-  box-sizing: border-box;
-  background-color: $color_8;
-
-  &:focus {
-    border-color: $color_11;
-    outline: none;
-    box-shadow: 0 0 5px $col_shadow;
-  }
-}
-
-@mixin shared-form-styles {
-  background-image: url(../img/form_background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 4px 15px $col_shadow;
-  width: 100%;
-  max-width: 450px;
-}
-
-@mixin shared-label-styles {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 8px;
-  color: $color_7;
-}
-
-@mixin shared-button-styles {
-  width: 100%;
-  padding: 12px;
-  font-size: 1em;
-  font-weight: bold;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s;
-
-  &:hover {
-    transform: scale(1.02);
-  }
 }
 
 .father_form {
