--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,90 +1,74 @@
-// _footer.scss
+@import '../mixins';
 
+// _footer.scss
 footer {
-  a {
-    color: $color_1;
-  }
   background-color: $color_2;
   color: $color_1;
   z-index: 15;
+
+  a {
+    color: $color_1;
+  }
 }
 
 .topper-foot {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: baseline;
-  flex-wrap: wrap;
-  padding: 100px 0px;
+  @include flexbox(space-evenly, baseline, wrap);
+  padding: 100px 0;
+
   table {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    @include list-reset;
   }
+
   .fir_foot {
     button {
-      background-color: $color_1;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-      a {
-        color: $color_4;
-        text-decoration: none;
-      }
-      &:active {
-        transform: scale(0.98);
-        background-color: $color_10;
-      }
+      @include button($color_1, $color_4, $color_10);
     }
   }
-  .sec_foot {
-    > * {
-      padding: 10px 0;
-    }
+
+  .sec_foot>* {
+    padding: 10px 0;
   }
 }
 
 .sec_foot {
   ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    @include list-reset;
   }
+
   width: 12%;
 }
 
 .fir_foot {
-  display: flex;
+  @include flexbox(center, center, column);
+  gap: 30px;
   text-align: center;
   flex-direction: column;
-  gap: 30px;
+
   h3 {
     margin-bottom: 40px;
   }
+
   button {
     margin-bottom: 23px;
   }
 }
 
-.thi_foot {
-  > h3 {
-    padding-bottom: 20px;
-    text-align: center;
-  }
+.thi_foot>h3 {
+  padding-bottom: 20px;
+  text-align: center;
 }
 
 .social-links {
-  display: flex;
+  @include flexbox(center);
   margin-top: 10px;
   gap: 20px;
-  justify-content: center;
 }
 
 .sublinks_1 {
   display: flex;
   flex-direction: column;
-  > * {
+
+  >* {
     margin-top: 15px;
   }
 }
