--- a/scss/layout/_holder-index.scss
+++ b/scss/layout/_holder-index.scss
@@ -1,13 +1,4 @@
-@mixin center-absolute($top) {
-    position: absolute;
-    top: $top;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-@mixin text-shadow($color) {
-    text-shadow: 2px 2px 5px $color;
-}
+@import '../mixins';
 
 %button-base {
     background-color: $color_1;
@@ -58,12 +49,14 @@
 
     button {
         @extend %button-base;
+
         &:active {
             background-color: $color_10;
         }
     }
 
-    .bot1, .bot2 {
+    .bot1,
+    .bot2 {
         @extend %button-base;
         @include center-absolute(64%);
         z-index: 2;
@@ -75,6 +68,7 @@
         border-style: solid;
         border-width: 3px;
         color: $color_1;
+
         &:active {
             background-color: $color_8;
         }
