--- a/scss/utils/_mediaqueries.scss
+++ b/scss/utils/_mediaqueries.scss
@@ -1,478 +1,499 @@
 // _mediaqueries.scss
 
 @media (max-width: 1024px) {
-  header {
-    font-size: 0.9rem;
-  }
-  footer {
-    font-size: 0.9rem;
-  }
-  .thi_foot {
-    > iframe {
-      height: 200px;
-      width: 200px;
+    header {
+        font-size: 0.9rem;
     }
-  }
-  .Mitem {
-    flex-direction: column;
-    gap: 2rem;
-    .R_Mitem {
-      width: 100%;
-      order: 2;
-      .R_Mitem_bot {
-        position: relative;
-        bottom: 0px;
-      }
+
+    footer {
+        font-size: 0.9rem;
     }
-    .L_Mitem {
-      order: 1;
-      .L_Mitem_imgs {
-        .mainIMG {
-          img {
-            width: 90%;
-          }
+
+    .thi_foot {
+        >iframe {
+            height: 200px;
+            width: 200px;
         }
-        .L_Mitem_imgs_extras {
-          img {
-            width: 70%;
-          }
-        }
-      }
     }
-  }
+
+    .Mitem {
+        flex-direction: column;
+        gap: 2rem;
+
+        .R_Mitem {
+            width: 100%;
+            order: 2;
+
+            .R_Mitem_bot {
+                position: relative;
+                bottom: 0px;
+            }
+        }
+
+        .L_Mitem {
+            order: 1;
+
+            .L_Mitem_imgs {
+                .mainIMG {
+                    img {
+                        width: 90%;
+                    }
+                }
+
+                .L_Mitem_imgs_extras {
+                    img {
+                        width: 70%;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 768px) {
-  .filter-body-sm {
-    display: unset;
-    // Resto de estilos que tenías dentro
-    background-color: $color_10;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px $col_shadow;
-    h2 {
-      color: $color_4;
-      font-size: 20px;
-      margin-bottom: 15px;
+    .filter-body-sm {
+        display: unset;
+        // Resto de estilos que tenías dentro
+        background-color: $color_10;
+        padding: 15px;
+        border-radius: 5px;
+        box-shadow: 0 4px 6px $col_shadow;
+
+        h2 {
+            color: $color_4;
+            font-size: 20px;
+            margin-bottom: 15px;
+        }
     }
-  }
-  .card-body {
-    padding: 20px;
-  }
-  .filter-body {
-    display: none !important;
-  }
-  /* Diseño responsive del titulo ubicado en el index */
-  .fa-angles-down {
-    margin: 0 30px;
-    position: relative;
-    top: 3vh;
-}
 
-.titular-body-index {
-    display: none;
-}
-
-.separador-titular-small {
-    display: unset;
-    position: relative;
-    top: -20px;
-    h1 {
-        margin-bottom: 1.1rem;
+    .card-body {
+        padding: 20px;
     }
-}
-/* Adaptaciones responsive para el diseño del header y el footer en todos los archivos */
-header,
-footer {
-    flex-direction: column;
-    justify-content: center;
-    height: auto;
-}
-
-/* Cambio y correccion del diseño de navbar para todo el sitio - diseño responsive */
-.big_navbar {
-    display: none;
-}
-
-.bg-dark {
-    background-color: $color_1 !important;
-}
-
-.d-block {
-    height: 90px;
-}
-
-.small_navbar .nombre_head {
-    color: $color_4;
-    font-weight: bold;
-    font-size: 30px;
-    margin-top: 0.7rem;
-    margin-left: 1rem;
-}
-
-/* Cuerpo del menu responsive para dispositivos pequeños */
-.offcanvas-body {
-    flex-grow: 1;
-    padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x);
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    justify-content: space-between;
-}
-
-.offcanvas-body * {
-    width: 100%;
-}
-
-.links_small_navbar .dropdown-toggle {
-    background-color: $color_6;
-    color: $color_4;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px $col_shadow;
-    transition: background-color 0.3s ease, transform 0.4s ease;
-}
-
-/* Dropdown menu del navbar responsive */
-.links_small_navbar .dropdown-menu {
-    background-color: $color_10;
-    border: none;
-    border-radius: 5px;
-    margin-top: 20px;
-    height: auto;
-    padding: 10px;
-
-}
-
-.links_small_navbar .dropdown-item {
-    color: $color_4;
-    padding: 10px;
-    margin-bottom: 15px;
-    text-align: center;
-    transition: background-color 0.3s ease;
-    background-color: $color_11;
-    border-radius: 1%;
-}
-
-.links_small_navbar .dropdown-item:hover {
-    background-color: $color_7;
-}
-
-/* Diseño responsive del filtro de la pagina de productos para pantallas pequeñas */
-.filter-body-sm {
-    background-color: $color_7;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px $col_shadow;
-}
-
-.filter-body-sm h2 {
-    color: $color_4;
-    font-size: 20px;
-    margin-bottom: 15px;
-}
-
-.filter-dropdown-talle,
-.filter-dropdown-categoria,
-.filter-prize,
-.filter-stock,
-.filter-reset,
-.filter-search {
-    margin-bottom: 15px;
-}
-
-.filter-stock {
-    width: 75%;
-}
-
-.filter-reset {
-    width: 18%;
-    margin-left: 180px;
-}
-
-
-.filter-dropdown-talle select,
-.filter-dropdown-categoria select {
-    background-color: $color_10;
-    color: $color_4;
-    border: 1px solid $color_9;
-    border-radius: 5px;
-    padding: 8px;
-}
-
-
-.filter-prize p {
-    color: $color_4;
-    font-size: 16px;
-}
-
-.filter-prize-range input {
-    width: 100%;
-    background: transparent;
-}
-
-.filter-stock label {
-    font-size: 16px;
-    color: $color_4;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.filter-stock label:hover {
-    background-color: $color_9;
-}
-
-.filter-search button {
-    width: 100%;
-    background-color: $button_second_hv;
-    border: none;
-    color: $color_4;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.filter-search button:hover {
-    background-color: $button_second;
-}
-
-/* Diseño mejorado del aspecto de los elementos del menu responsive */
-nav ul {
-    background-color: $color_1;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    flex-direction: column;
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    width: 100%;
-    margin: 0;
-}
-
-nav ul li a {
-    display: block;
-    padding: 10px;
-    margin: 5px 0;
-    color: $color_4;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-color: $color_10;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px $col_shadow;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-nav ul li a:hover {
-    background-color: $color_9;
-    transform: translateY(-2px);
-}
-
-nav ul li a:active {
-    background-color: $color_11;
-    transform: translateY(0);
-}
-
-/* Diseño de las barras de busqueda en los encabezados */
-.search-box {
-    display: inline-flex;
-    gap: 5px;
-    align-items: center;
-    width: 100%;
-}
-
-.search-box button {
-    padding: 0px 15px;
-    height: 47px;
-    width: auto;
-}
-
-.search-box input {
-    height: unset;
-    width: 100%;
-}
-
-.text-bg-dark {
-    background-color: $color_10;
-}
-
-
-/* Diseño responsive de la caja de subscripcion en el index */
-.body_sobrefoot {
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-}
-
-.body_sobrefoot .bsf_text {
-    padding: 2vh 3%;
-    justify-items: center;
-    padding-bottom: 0;
-}
-
-.body_sobrefoot .subscription {
-    margin: 2vh;
-    justify-content: center;
-    width: 90%;
-    max-width: 120%;
-    margin-left: 3%;
-}
-
-/* Adaptaciones de la resolucion mas pequeña en la página del item */
-.ruteIndicator {
-    font-size: 0.9rem;
-    padding: 1rem;
-    text-align: center;
-}
-
-.Mitem {
-    flex-direction: column;
-    padding: 2rem 2%;
-    padding-top: 0.5rem;
-}
-
-.Mitem .R_Mitem {
-    width: 100%;
-    padding: 2rem;
-    background-color: $color_8;
-    /* Fondo gris que cubre todo */
-}
-
-.Mitem .L_Mitem {
-    width: 100%;
-    padding: 0;
-    height: auto;
-}
-
-
-.Mitem .L_Mitem .L_Mitem_imgs .mainIMG {
-    position: relative;
-    top: 0vh;
-    width: 100%;
-
-}
-
-.Mitem .L_Mitem .L_Mitem_imgs .mainIMG img,
-.Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras img {
-    width: 90%;
-    position: relative;
-    top: 0vh;
-    aspect-ratio: auto;
-
-}
-
-.Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras {
-    order: 2;
-    display: flex;
-    border-style: none;
-    border-radius: 2%;
-    gap: 8vh;
-    padding: 2vh 1%;
-    position: relative;
-    justify-content: center;
-    flex-direction: row;
-
-}
-
-.Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras img {
-    height: auto;
-}
-
-.Mitem .R_Mitem .R_Mitem_bot {
-    position: relative;
-    top: 2vh;
-}
-
-/* Ocultar secciones de detalles y comentarios */
-.Mitem .L_Mitem .L_Mitem_txt,
-.Mitem .L_Mitem .L_Mitem_com,
-.Mitem .L_Mitem hr {
-    display: none;
-}
-
-.Mitem .L_Mitem .L_Mitem_imgs {
-    flex-direction: column;
-    align-items: center;
-    display: flex;
-    padding: 10px;
-    border-style: none;
-    border-radius: 1%;
-}
-
-/* Adaptacion de elementos del footer para la resolucion de 768px */
-.topper-foot {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 20px;
-    gap: 40px;
-}
-
-.topper-foot>div {
-    width: 100%;
-    text-align: center;
-}
-
-/* Estilo de los títulos en el footer */
-.topper-foot h3 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.sec_foot li {
-    margin: 5px 0;
-}
-
-.sec_foot li a {
-    color: $color_1;
-    text-decoration: none;
-}
-
-
-/* Correccion de tamaños y relaciones entre los elementos del holder de la pantalla del index */
-.holder .bot1,
-.holder .bot2 {
-    top: 78%;
-}
-
-.holder .text-overlay2 {
-    top: 48%;
-    width: 75%;
-}
-
-.holder .text-overlay1 {
-    text-align: center;
-    top: 26%;
-    width: 75%;
-}
-
-.father_form {
-    box-shadow: 0 0px 0px $col_shadow;
-}
-
-.body_contact {
-    min-height: auto;
-    padding: 20px 0;
-}
+
+    .filter-body {
+        display: none !important;
+    }
+
+    /* Diseño responsive del titulo ubicado en el index */
+    .fa-angles-down {
+        margin: 0 30px;
+        position: relative;
+        top: 3vh;
+    }
+
+    .titular-body-index {
+        display: none;
+    }
+
+    .separador-titular-small {
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        height: 4vh;
+        padding-top: 0;
+        margin-bottom: 3vh;
+        margin-top: 4px;
+    }
+
+    /* Adaptaciones responsive para el diseño del header y el footer en todos los archivos */
+    header,
+    footer {
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+    }
+
+    /* Cambio y correccion del diseño de navbar para todo el sitio - diseño responsive */
+    .big_navbar {
+        display: none;
+    }
+
+    .bg-dark {
+        background-color: $color_1 !important;
+    }
+
+    .d-block {
+        height: 90px;
+    }
+
+    .small_navbar .nombre_head {
+        color: $color_4;
+        font-weight: bold;
+        font-size: 30px;
+        margin-top: 0.7rem;
+        margin-left: 1rem;
+    }
+
+    /* Cuerpo del menu responsive para dispositivos pequeños */
+    .offcanvas-body {
+        flex-grow: 1;
+        padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x);
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        justify-content: space-between;
+    }
+
+    .offcanvas-body * {
+        width: 100%;
+    }
+
+    .links_small_navbar .dropdown-toggle {
+        background-color: $color_6;
+        color: $color_4;
+        font-size: 18px;
+        font-weight: 500;
+        text-align: center;
+        text-transform: uppercase;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 4px 6px $col_shadow;
+        transition: background-color 0.3s ease, transform 0.4s ease;
+    }
+
+    /* Dropdown menu del navbar responsive */
+    .links_small_navbar .dropdown-menu {
+        background-color: $color_10;
+        border: none;
+        border-radius: 5px;
+        margin-top: 20px;
+        height: auto;
+        padding: 10px;
+
+    }
+
+    .links_small_navbar .dropdown-item {
+        color: $color_4;
+        padding: 10px;
+        margin-bottom: 15px;
+        text-align: center;
+        transition: background-color 0.3s ease;
+        background-color: $color_11;
+        border-radius: 1%;
+    }
+
+    .links_small_navbar .dropdown-item:hover {
+        background-color: $color_7;
+    }
+
+    /* Diseño responsive del filtro de la pagina de productos para pantallas pequeñas */
+    .filter-body-sm {
+        background-color: $color_7;
+        padding: 15px;
+        border-radius: 5px;
+        box-shadow: 0 4px 6px $col_shadow;
+    }
+
+    .filter-body-sm h2 {
+        color: $color_4;
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    .filter-dropdown-talle,
+    .filter-dropdown-categoria,
+    .filter-prize,
+    .filter-stock,
+    .filter-reset,
+    .filter-search {
+        margin-bottom: 15px;
+    }
+
+    .filter-stock {
+        width: 75%;
+    }
+
+    .filter-reset {
+        width: 18%;
+        margin-left: 180px;
+    }
+
+
+    .filter-dropdown-talle select,
+    .filter-dropdown-categoria select {
+        background-color: $color_10;
+        color: $color_4;
+        border: 1px solid $color_9;
+        border-radius: 5px;
+        padding: 8px;
+    }
+
+
+    .filter-prize p {
+        color: $color_4;
+        font-size: 16px;
+    }
+
+    .filter-prize-range input {
+        width: 100%;
+        background: transparent;
+    }
+
+    .filter-stock label {
+        font-size: 16px;
+        color: $color_4;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .filter-stock label:hover {
+        background-color: $color_9;
+    }
+
+    .filter-search button {
+        width: 100%;
+        background-color: $button_second_hv;
+        border: none;
+        color: $color_4;
+        padding: 10px;
+        font-size: 16px;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .filter-search button:hover {
+        background-color: $button_second;
+    }
+
+    /* Diseño mejorado del aspecto de los elementos del menu responsive */
+    nav ul {
+        background-color: $color_1;
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        flex-direction: column;
+        list-style: none;
+        padding: 0;
+    }
+
+    nav ul li {
+        width: 100%;
+        margin: 0;
+    }
+
+    nav ul li a {
+        display: block;
+        padding: 10px;
+        margin: 5px 0;
+        color: $color_4;
+        font-size: 18px;
+        font-weight: 500;
+        text-align: center;
+        text-decoration: none;
+        text-transform: uppercase;
+        background-color: $color_10;
+        border-radius: 5px;
+        box-shadow: 0 4px 6px $col_shadow;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    nav ul li a:hover {
+        background-color: $color_9;
+        transform: translateY(-2px);
+    }
+
+    nav ul li a:active {
+        background-color: $color_11;
+        transform: translateY(0);
+    }
+
+    /* Diseño de las barras de busqueda en los encabezados */
+    .search-box {
+        display: inline-flex;
+        gap: 5px;
+        align-items: center;
+        width: 100%;
+    }
+
+    .search-box button {
+        padding: 0px 15px;
+        height: 47px;
+        width: auto;
+    }
+
+    .search-box input {
+        height: unset;
+        width: 100%;
+    }
+
+    .text-bg-dark {
+        background-color: $color_10;
+    }
+
+
+    /* Diseño responsive de la caja de subscripcion en el index */
+    .body_sobrefoot {
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+    }
+
+    .body_sobrefoot .bsf_text {
+        padding: 2vh 3%;
+        justify-items: center;
+        padding-bottom: 0;
+    }
+
+    .body_sobrefoot .subscription {
+        margin: 2vh;
+        justify-content: center;
+        width: 90%;
+        max-width: 120%;
+        margin-left: 3%;
+    }
+
+    /* Adaptaciones de la resolucion mas pequeña en la página del item */
+    .ruteIndicator {
+        font-size: 0.9rem;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .Mitem {
+        flex-direction: column;
+        padding: 2rem 2%;
+        padding-top: 0.5rem;
+    }
+
+    .Mitem .R_Mitem {
+        width: 100%;
+        padding: 2rem;
+        background-color: $color_8;
+        /* Fondo gris que cubre todo */
+    }
+
+    .Mitem .L_Mitem {
+        width: 100%;
+        padding: 0;
+        height: auto;
+    }
+
+
+    .Mitem .L_Mitem .L_Mitem_imgs .mainIMG {
+        position: relative;
+        top: 0vh;
+        width: 100%;
+
+    }
+
+    .Mitem .L_Mitem .L_Mitem_imgs .mainIMG img,
+    .Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras img {
+        width: 90%;
+        position: relative;
+        top: 0vh;
+        aspect-ratio: auto;
+
+    }
+
+    .Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras {
+        order: 2;
+        display: flex;
+        border-style: none;
+        border-radius: 2%;
+        gap: 8vh;
+        padding: 2vh 1%;
+        position: relative;
+        justify-content: center;
+        flex-direction: row;
+
+    }
+
+    .Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras img {
+        height: auto;
+    }
+
+    .Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras {
+        gap: 3vh;
+    }
+
+    .Mitem .R_Mitem .R_Mitem_bot {
+        position: relative;
+        top: 2vh;
+    }
+
+    /* Ocultar secciones de detalles y comentarios */
+    .Mitem .L_Mitem .L_Mitem_txt,
+    .Mitem .L_Mitem .L_Mitem_com,
+    .Mitem .L_Mitem hr {
+        display: none;
+    }
+
+    .Mitem .L_Mitem .L_Mitem_imgs {
+        flex-direction: column;
+        align-items: center;
+        display: flex;
+        padding: 10px;
+        border-style: none;
+        border-radius: 1%;
+    }
+
+    /* Adaptacion de elementos del footer para la resolucion de 768px */
+    .topper-foot {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 20px;
+        gap: 40px;
+    }
+
+    .topper-foot>div {
+        width: 100%;
+        text-align: center;
+    }
+
+    /* Estilo de los títulos en el footer */
+    .topper-foot h3 {
+        font-size: 16px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+
+    .sec_foot li {
+        margin: 5px 0;
+    }
+
+    .sec_foot li a {
+        color: $color_1;
+        text-decoration: none;
+    }
+
+
+    /* Correccion de tamaños y relaciones entre los elementos del holder de la pantalla del index */
+    .holder .bot1,
+    .holder .bot2 {
+        top: 78%;
+    }
+
+    .holder .text-overlay2 {
+        top: 48%;
+        width: 75%;
+    }
+
+    .holder .text-overlay1 {
+        text-align: center;
+        top: 26%;
+        width: 75%;
+    }
+
+    .father_form {
+        box-shadow: 0 0px 0px $col_shadow;
+    }
+
+    .body_contact {
+        min-height: auto;
+        padding: 20px 0;
+    }
 }
 
 
 @media (max-width: 576px) {
-  .card-body {
-    padding: 15px;
-  }
+    .card-body {
+        padding: 15px;
+    }
 }
