--- a/scss/layout/_holder-index.scss
+++ b/scss/layout/_holder-index.scss
@@ -19,7 +19,7 @@
 .holder {
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 78vh;
     margin: 0;
     overflow: hidden;
 
