--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -39,6 +39,7 @@ $border-radius: 5px;
 $background-color: $color_6;
 $height-small: 4vh;
 $height-medium: 7vh;
+$height-large: 11vh;
 
 // Cards
 $border-radius-card: 10px;
@@ -49,3 +50,5 @@ $hover-shadow-card: 0 5px 15px $col_shadow;
 $font-size-title: 2.2rem;
 $height-card-default: 40vh;
 $height-title-section: 12vh;
+
+$font-size2: 0.9rem;
