--- a/css/style.css
+++ b/css/style.css
@@ -785,7 +785,7 @@ footer a {
 
 .filter-body {
   width: 100%;
-  height: 7vh;
+  height: 11vh;
   background-color: #aaaaaa;
   border-bottom: white;
   border-width: 2px;
@@ -849,7 +849,8 @@ footer a {
   color: white;
   border: 1px solid #424242;
   border-radius: 5px;
-  height: 4vh;
+  height: 7vh;
+  font-size: 0.9rem;
 }
 
 .titular-body-productos {
@@ -1074,11 +1075,16 @@ footer a {
   }
   .filter-dropdown-talle select,
   .filter-dropdown-categoria select {
-    background-color: #303030;
+    background-color: #333;
     color: white;
     border: 1px solid #424242;
     border-radius: 5px;
-    padding: 8px;
+    height: 7vh;
+    font-size: 0.9rem;
+  }
+  .filter-dropdown-talle select,
+  .filter-dropdown-categoria select {
+    height: 7vh;
   }
   .filter-prize p {
     color: white;
