--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -17,3 +17,12 @@
         transform: rotate(5deg);
     }
 }
+
+@keyframes flipEffect {
+    0% {
+      transform: rotateX(0deg);
+    }
+    100% {
+      transform: rotateX(30deg);
+    }
+  }
