--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -5,7 +5,7 @@
 
 .filter-body {
   width: 100%;
-  height: $height-medium;
+  height: $height-large;
   background-color: $color_14;
   @include border;
   display: flex;
